# GENetLib

./: .coveragerc.ini  .gitignore  .readthedocs.yaml  CI.yml  LICENSE  MANIFEST.in.txt  README.md  filter_coverage.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  PYPI.yml  PyPI.yml  black.yml  code_converage.yml  code_coverage.yml  documentation.yml  main.yml  main2.yml  pypi.yml
GENetLib/: BasisFunc.py  BsplineFunc.py  CreateBasis.py  FD.py  FDchk.py  GENet.py  GE_Net.py  GridSNPGE.py  GridScalerGE.py  GridScalerGE_Sim.py  PPFunc.py  PreData1.py  PreData2.py  SNPGE.py  SNPgvf.py  ScalerGE.py  ScalerL2Train.py  ScalerMCP_L2Train.py  SimDataSNP.py  SimDataScaler.py  SplineDesign.py  Survival_CostFunc_CIndex.py  __init__.py  basis_fd.py  create_basis.py  eval_basis_fd.py  fda_func.py  getbasismatrix.py  inprod.py  inprod_bspline.py  plotFD.py  plotGVF.py  plotRawdata.py  plot_rawdata.py  polyprod.py  pre_data2.py  predict_ge.py  sim_data.py  survival_costfunc_cindex.py
docs/: README.md  requirements.txt
docs/source/: appendix.rst  conf.py  contribution.rst  index.rst  installation.rst  introduction.rst  landingpage.rst  outlook.rst  references.bib  references.rst  simulation  simulation.rst
docs/source/main functions/: func_ge.rst  grid_func_ge.rst  grid_scalar_ge.rst  index.rst  main functions.rst  plot_fd.rst  plot_func.rst  plot_rawdata.rst  predict_func.rst  predict_scalar  scalar_ge.rst  sim_data_func.rst  sim_data_scalar.rst
docs/source/methods/: FuncGE.rst  ScalarGE.rst  index.rst  methods.rst
pytest/: test_all.py  test_basis_fd.py  test_basis_mat.py  test_create_basis.py  test_dense_to_func.py  test_eval_basis_fd.py  test_fd.py  test_fda_func.py  test_func_ge.py  test_grid_func_ge.py  test_grid_scalar_ge.py  test_inprod.py  test_inprod_bspline.py  test_plot.py  test_pre_data2.py  test_scalar_ge.py  test_sim_data_func.py  test_sim_data_scalar.py  test_spline_design.py
source/: index.rst  requirement.txt
