[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GENetLib"
version = "1.1.3"
description = "GENetLib is a Python library designed for gene-environment interaction analysis via neural network, addressing the analytical challenges in complex disease research."
authors = [{name="Yuhao Zhong", email="Barry57@163.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.1"
    "numpy>=1.24.3"
    "pandas>=1.5.3"
    "scipy>=1.10.1"
    "setuptools>=67.8.0"
    "torch>=2.3.0"
]
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
