[tool.black]
line-length = 80

[tool.poetry]
name = "Barry57-GENetLib"
version = "1.1.3"
description = "A Python Library for Gene–environment Interaction Analysis via Deep Learning."
authors = ["Yuhao Zhong <Barry57@163.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://barry57.github.io/GENetLib/"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
flax = "^0.8.5"
optax = "^0.1.3"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
numpy = "^1.23.4"
tensorflow-cpu = { version = "^2.11.0", markers = "sys_platform != 'darwin'" }
tensorflow-macos = { version = "2.13.1", markers = "sys_platform == 'darwin'" }
array-record = { version = "0.4.1", markers = "sys_platform == 'darwin'" }
Sphinx = { version = "^7.0.0", optional = true }
sphinx-autodoc-typehints = { version = "^1.19.5", optional = true }
nbsphinx = { version = "^0.8.10", optional = true }
nbsphinx-link = { version = "^1.3.0", optional = true }
sphinx-gallery = { version = "^0.11.1", optional = true }
pydata-sphinx-theme = { version = "^0.12.0", optional = true }
ipython = { version = "^8.7.0", optional = true }
jupyter = {version = "^1.0.0", optional = true}
transformers = {version = "^4.28.1", optional = true}
datasets = {version = "^2.11.0", optional = true}
sagemaker-utils = {version = "^0.3.6", optional = true}
sagemaker = {version = "^2.161.0", optional = true}
boto3 = {version = "^1.26.145", optional = true}
hydra-core = {version = "^1.3.2", optional = true}
torch = {version = "^2.1.0", optional = true}
scikit-learn = {version = "^1.3.2", optional = true}
umap-learn = {version = "^0.5.5", optional = true}
tabulate = "^0.9.0"
jax = "~0.4.30"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-autodoc-typehints", "pydata-sphinx-theme", "nbsphinx", "nbsphinx-link",
    "sphinx-gallery", "ipython", "pandas", "tensorflow-datasets", "xlrd", "openpyxl", "yfinance", 'tabulate', 'pandoc']
notebooks = ["jupyter"]
transformers = ["transformers", "datasets"]
sagemaker = ["boto3", "hydra-core", "sagemaker", "sagemaker-utils"]
hallucination = ["torch", "transformers", "datasets", "scikit-learn", "umap-learn"]

[tool.poetry.group.dev.dependencies]
traitlets = "^5.5.0"
pre-commit = "^3.3.1"
absolufy-imports = "^0.3.1"
codespell = "^2.2.4"
